--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 #2016/02/15 - ignore cocos2d-x folders
-Tank/cocos2d
-Tank/Tank/proj.win32/Debug.win32
-Tank/Tank/proj.win32/Release.win32
-Tank/Tank/proj.win32/res
+Tank/cocos2d/
+Tank/Tank/proj.win32/Debug.win32/
+Tank/Tank/proj.win32/Release.win32/
+Tank/Tank/proj.win32/res/
 Tank/Tank/proj.win32/Tank.sdf
 
 # Compiled Object files
